--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,6 @@ block content
         input(type="text" id="userText" name="userText")
         br
         br
-        button(type="Submit") Submit
+        button(type="Submit") Submit!
     if message
         p=message
